[tool.poetry]
name = "DeepBench"
version = "0.2.3"
description = "Physics Benchmark Dataset Generator"
license = "Apache 2.0"
authors = ["M. Voetberg <maggiev@fnal.gov>", "Ashia Livaudais", "Becky Nevin", "Omari Paul", "Brian Nord"]
maintainers = ["M. Voetberg <maggiev@fnal.gov>", "Brian Nord <bnord@fnal.gov"]
readme = "README.md"
homepage = "https://github.com/deepskies/DeepBench"
repository = "https://github.com/deepskies/DeepBench"
documentation = "https://deepbench.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.12,<4.0,"
numpy = ">=1.25.0"
matplotlib = ">=3.7.1"
scikit-image = "^0.23.0"
astropy = ">=7.0.0"
autograd = ">=1.5"
pyyaml = ">=6.0"
h5py = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
sphinx-autodoc-typehints = "^1.23.2"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
